src/test/deca/syntax/parser/invalid/decl_var_multiple_assign_word.deca
// Parser test, second value assigned unavailable

{
    int x, y = 8, .;
}